# medsam2_rcc_submission_20260627

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
checkpoints/: MedSAM2_latest.pt  README.md  amg_clf.pt  anomaly_ae.pt  box_refiner.pt  detector.pt  detector_maskloss.pt  detector_recall.pt  detector_recall128.pt  detector_recall_ms.pt  detector_truth.pt  detector_truth_ep14confound.pt  ellipse_reg.pt  grid_clf.pt  large_dl.done  mae_encoder.pt  mask2former_lite.pt  sam2.1_rcc_ft.pt  sam2.1_rcc_ft_e2e.pt  sam2.1_rcc_red_truth.pt  seg_crop_be_lab.pt  seg_crop_fft_lab.pt  seg_crop_segR_lab.pt  seg_crop_segR_lab_adv.pt  seg_crop_segR_lab_adv_cldice.pt  seg_crop_segR_lab_cldice.pt  seg_crop_segR_labtex.pt  seg_crop_segR_labtex_bd.pt  seg_crop_segR_labtex_focaldice.pt  seg_crop_segR_rgb.pt  seg_crop_seg_mae.pt  seg_crop_seg_unet_scratch.pt  seg_crop_swin_labtex_bd.pt  seg_sam.pt  seg_sam_large.pt  slic_clf.pt  supcon.pt
configs/: README.md
configs/data/: rcc_gross.yaml
configs/evaluate/: handdraw50.yaml
configs/model/: full_auto_detector.yaml  sam2_tiny_baseline.yaml
configs/train/: seg_crop.yaml
data/: README.md
data/deliverable_dataset/: README.md  manifest.csv
docs/: README.md  project_summary.md  reproducibility.md
experiments/: README.md
legacy_artifacts/: README.md
models/: README.md  cellbox.pt  cellbox_ensemble.pt
notebooks/: README.md
reports/: README.md
results/: README.md
scripts/: README.md  create_run.py  export_checksums.py  validate_artifacts.py
src/: README.md  __init__.py
tests/: README.md
(+1879 files in other folders)
